--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
 @import url("https://fonts.cdnfonts.com/css/freehand575-bt");
-@import url("https://fonts.googleapis.com/css2?family=Lekton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+}
